--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
+    android:background="#000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameActivity">
@@ -27,31 +28,39 @@
 
     <Button
         android:id="@+id/new_game_game_button"
-        android:layout_width="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/new_game_game_button"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nextfigure_game_surfaceview" />
 
     <Button
         android:id="@+id/pause_game_button"
-        android:layout_width="115dp"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/pause_game_button"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_game_game_button" />
 
     <Button
         android:id="@+id/exit_game_button"
-        android:layout_width="115dp"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/exit_game_button"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pause_game_button" />
 
     <TextView
         android:id="@+id/scores_game_textview"
-        android:layout_width="115dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/scores_game_textview"
         app:layout_constraintEnd_toEndOf="@+id/new_game_game_button"
@@ -60,10 +69,11 @@
 
     <TextView
         android:id="@+id/infobreath_game_textview"
-        android:layout_width="115dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/infobreath_game_textview"
         android:visibility="invisible"
+        app:layout_constraintEnd_toStartOf="@+id/game_game_surfaceview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/record_game_textview" />
 
@@ -91,6 +101,8 @@
         android:id="@+id/left_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/left_game_button"
         app:layout_constraintBottom_toBottomOf="@+id/right_game_button"
         app:layout_constraintEnd_toStartOf="@+id/right_game_button"
@@ -100,6 +112,8 @@
         android:id="@+id/right_game_button"
         android:layout_width="103dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/right_game_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,6 +123,8 @@
         android:id="@+id/down_game_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/down_game_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,6 +136,8 @@
         android:id="@+id/rotate_game_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/rotate_game_button"
         app:layout_constraintBottom_toTopOf="@+id/right_game_button"
         app:layout_constraintEnd_toEndOf="parent"
