--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
+    android:background="#000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameActivity">
@@ -31,6 +32,8 @@
         android:id="@+id/new_game_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/new_game_game_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nextfigure_game_surfaceview" />
@@ -39,6 +42,8 @@
         android:id="@+id/pause_game_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/pause_game_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
@@ -48,6 +53,8 @@
         android:id="@+id/exit_game_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/exit_game_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/new_game_game_button"
@@ -95,6 +102,8 @@
         android:id="@+id/left_game_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/left_game_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -103,6 +112,8 @@
         android:id="@+id/right_game_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/right_game_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/left_game_button" />
@@ -111,6 +122,8 @@
         android:id="@+id/down_game_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/down_game_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/rotate_game_button"
@@ -120,6 +133,8 @@
         android:id="@+id/rotate_game_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:textSize="18sp"
         android:text="@string/rotate_game_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
